--- a/iventik.html
+++ b/iventik.html
@@ -3,60 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <title>EBASHIM</title>
-  <link rel="stylesheet" href="C:\JavaProjects\iventik\css\style.css">
+  <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
 <div class="container">
-  <div class="box box-1" style="--img: url(https://i.postimg.cc/sgBkfbtx/img-1.jpg);" data-text="Renji"></div>
-  <div class="box box-2" style="--img: url(https://i.postimg.cc/3RZ6bhDS/img-2.jpg);" data-text="Sora"></div>
-  <div class="box box-3" style="--img: url(https://i.postimg.cc/DZhHg0m4/img-3.jpg);" data-text="Kaito"></div>
-  <div class="box box-4" style="--img: url(https://i.postimg.cc/KjqWx5ft/img-4.jpg);" data-text="Tsuki"></div>
-  <div class="box box-5" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Mitsui"></div>
-</div>
-<div class="container">
-  <!-- Изображение 1 -->
   <div class="box box-1" style="--img: url(https://i.postimg.cc/sgBkfbtx/img-1.jpg);" data-text="Renji">
-    <!-- Блок для ввода имени и числа -->
     <div class="input-block">
-      <label for="name1">Имя:</label>
-      <input type="text" id="name1" name="name1" placeholder="Введите имя">
+      <input type="text" id="name1" name="name1" placeholder="Kto nahui?">
     </div>
     <div class="input-block">
-      <label for="number1">Число:</label>
-      <input type="number" id="number1" name="number1" placeholder="Введите число">
+      <input type="number" id="number1" name="number1" placeholder="coins">
     </div>
   </div>
 
-  <!-- Изображение 2 -->
   <div class="box box-2" style="--img: url(https://i.postimg.cc/3RZ6bhDS/img-2.jpg);" data-text="Sora">
-    <!-- Блок для ввода имени и числа -->
     <div class="input-block">
-      <label for="name2">Имя:</label>
-      <input type="text" id="name2" name="name2" placeholder="Введите имя">
+      <input type="text" id="name2" name="name2" placeholder="Kto nahui?">
     </div>
     <div class="input-block">
-      <label for="number2">Число:</label>
-      <input type="number" id="number2" name="number2" placeholder="Введите число">
-    </div>
-  </div>
-  <div class="box box-3" style="--img: url(https://i.postimg.cc/DZhHg0m4/img-3.jpg);" data-text="Kaito"></div>
-    <!-- Блок для ввода имени и числа -->
-    <div class="input-block">
-      <label for="name1">Имя:</label>
-      <input type="text" id="name3" name="name1" placeholder="Введите имя">
-    </div>
-    <div class="input-block">
-      <label for="number1">Число:</label>
-      <input type="number" id="number3" name="number1" placeholder="Введите число">
+      <input type="number" id="number2" name="number2" placeholder="coins">
     </div>
   </div>
 
-  <!-- Добавьте аналогичные блоки для других изображений -->
-
-  <!-- Текст под полями для ввода -->
-  <div class="input-text">
-    <p style="color: white;">Текст под полями для ввода</p>
+  <div class="box box-3" style="--img: url(https://i.postimg.cc/DZhHg0m4/img-3.jpg);" data-text="Kaito">
+    <div class="input-block">
+      <input type="text" id="name3" name="name3" placeholder="Kto nahui?">
+    </div>
+    <div class="input-block">
+      <input type="number" id="number3" name="number3" placeholder="coins">
+    </div>
   </div>
+
+  <div class="box box-4" style="--img: url(https://i.postimg.cc/KjqWx5ft/img-4.jpg);" data-text="Tsuki">
+    <div class="input-block">
+      <input type="text" id="name4" name="name4" placeholder="Kto nahui?">
+    </div>
+    <div class="input-block">
+      <input type="number" id="number4" name="number4" placeholder="coins">
+    </div>
+  </div>
+
+  <div class="box box-5" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Mitsui">
+    <div class="input-block">
+      <input type="text" id="name5" name="name5" placeholder="Kto nahui?">
+    </div>
+    <div class="input-block">
+      <input type="number" id="number5" name="number5" placeholder="coins">
+    </div>
+  </div>
+
 </div>
 </body>
 </html>
