--- a/iventik.html
+++ b/iventik.html
@@ -3,16 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>EBASHIM</title>
-  <link rel="stylesheet" href="css\style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="container">
-  <div class="box box-1" style="--img: url(https://i.postimg.cc/sgBkfbtx/img-1.jpg);" data-text="Renji">
+  <div class="box box-1" style="--img: url(resourses/deamonTOOLS/Dimas1.png);" data-text="Renji">
     <div class="input-block">
       <input type="text" id="name1" name="name1" placeholder="Kto nahui?">
     </div>
     <div class="input-block">
       <input type="number" id="number1" name="number1" placeholder="coins">
+    </div>
+    <div class="image-button" onmouseover="showImageButton(1)" onmouseout="hideImageButton(1)" onclick="showImageOptions(1)">
+      Change Image
+      <select id="imageOptions1" class="image-options" onchange="changeImageFromSelect(1)">
+        <!-- Здесь будут варианты изображений для первой коробки -->
+        <option value="resourses/deamonTOOLS/Dimas1.png">Dimas1</option>
+        <option value="resourses/deamonTOOLS/Dimas2.png">Dimas2</option>
+        <option value="resourses/deamonTOOLS/Dimas3.png">Dimas3</option>
+        <!-- Добавьте другие изображения для первой коробки -->
+      </select>
     </div>
   </div>
 
@@ -53,5 +63,8 @@
   </div>
 
 </div>
+<script src="js\script.js"></script>
+</body>
+</html>
 </body>
 </html>
