--- a/iventik.html
+++ b/iventik.html
@@ -7,20 +7,26 @@
 </head>
 <body>
 <div class="container">
-  <div class="box box-1" style="--img: url(resourses/deamonTOOLS/Dimas1.png);" data-text="Renji">
+  <div class="box box-1" style="--img: url(https://i.postimg.cc/SK4k0VT2/Dimas1.png);" data-text="Renji">
     <div class="input-block">
       <input type="text" id="name1" name="name1" placeholder="Kto nahui?">
     </div>
     <div class="input-block">
       <input type="number" id="number1" name="number1" placeholder="coins">
     </div>
-    <div class="image-button" onmouseover="showImageButton(1)" onmouseout="hideImageButton(1)" onclick="showImageOptions(1)">
-      Change Image
+    <div class="image-options-container" onmouseover="showImageOptions(1)" onmouseout="hideImageOptions(1)">
       <select id="imageOptions1" class="image-options" onchange="changeImageFromSelect(1)">
         <!-- Здесь будут варианты изображений для первой коробки -->
-        <option value="resourses/deamonTOOLS/Dimas1.png">Dimas1</option>
-        <option value="resourses/deamonTOOLS/Dimas2.png">Dimas2</option>
-        <option value="resourses/deamonTOOLS/Dimas3.png">Dimas3</option>
+        <option value="https://i.postimg.cc/SK4k0VT2/Dimas1.png">Dimas1</option>
+        <option value="https://i.postimg.cc/90kCvhKC/Dimas2.png">Dimas2</option>
+        <option value="https://i.postimg.cc/xdPY9Hhs/Dimas3.png">Dimas3</option>
+        <option value="https://i.postimg.cc/gctzwVJQ/Dimas4.png">Dimas4</option>
+        <option value="https://i.postimg.cc/8zMNnxHg/Dimas5.png">Dimas5</option>
+        <option value="https://i.postimg.cc/NfygRK2M/Dimas6.png">Dimas6</option>
+        <option value="https://i.postimg.cc/nrrnRzd3/Dimas7.png">Dimas7</option>
+        <option value="https://i.postimg.cc/X7TnLn9g/Dimas8.png">Dimas8</option>
+        <option value="https://i.postimg.cc/ZRKmnnhJ/Dimas9.png">Dimas9</option>
+
         <!-- Добавьте другие изображения для первой коробки -->
       </select>
     </div>
