--- a/iventik.html
+++ b/iventik.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,19 +16,12 @@
     <div class="input-block">
       <input type="number" id="number1" name="number1" placeholder="coins">
     </div>
-    <div class="image-options-container" onmouseover="showImageOptions(1)" onmouseout="hideImageOptions(1)">
+    <div class="image-options-container">
       <select id="imageOptions1" class="image-options" onchange="changeImageFromSelect(1)">
         <!-- Здесь будут варианты изображений для первой коробки -->
         <option value="https://i.postimg.cc/SK4k0VT2/Dimas1.png">Dimas1</option>
         <option value="https://i.postimg.cc/90kCvhKC/Dimas2.png">Dimas2</option>
         <option value="https://i.postimg.cc/xdPY9Hhs/Dimas3.png">Dimas3</option>
-        <option value="https://i.postimg.cc/gctzwVJQ/Dimas4.png">Dimas4</option>
-        <option value="https://i.postimg.cc/8zMNnxHg/Dimas5.png">Dimas5</option>
-        <option value="https://i.postimg.cc/NfygRK2M/Dimas6.png">Dimas6</option>
-        <option value="https://i.postimg.cc/nrrnRzd3/Dimas7.png">Dimas7</option>
-        <option value="https://i.postimg.cc/X7TnLn9g/Dimas8.png">Dimas8</option>
-        <option value="https://i.postimg.cc/ZRKmnnhJ/Dimas9.png">Dimas9</option>
-
         <!-- Добавьте другие изображения для первой коробки -->
       </select>
     </div>
@@ -69,8 +64,6 @@
   </div>
 
 </div>
-<script src="js\script.js"></script>
-</body>
-</html>
+<script src="js/script.js"></script>
 </body>
 </html>
