--- a/iventik.html
+++ b/iventik.html
@@ -22,6 +22,13 @@
         <option value="https://i.postimg.cc/SK4k0VT2/Dimas1.png">Dimas1</option>
         <option value="https://i.postimg.cc/90kCvhKC/Dimas2.png">Dimas2</option>
         <option value="https://i.postimg.cc/xdPY9Hhs/Dimas3.png">Dimas3</option>
+        <option value="https://i.postimg.cc/gctzwVJQ/Dimas4.png">Dimas4</option>
+        <option value="https://i.postimg.cc/8zMNnxHg/Dimas5.png">Dimas5</option>
+        <option value="https://i.postimg.cc/NfygRK2M/Dimas6.png">Dimas6</option>
+        <option value="https://i.postimg.cc/nrrnRzd3/Dimas7.png">Dimas7</option>
+        <option value="https://i.postimg.cc/X7TnLn9g/Dimas8.png">Dimas8</option>
+        <option value="https://i.postimg.cc/ZRKmnnhJ/Dimas9.png">Dimas9</option>
+
         <!-- Добавьте другие изображения для первой коробки -->
       </select>
     </div>
@@ -60,6 +67,22 @@
     </div>
     <div class="input-block">
       <input type="number" id="number5" name="number5" placeholder="coins">
+    </div>
+  </div>
+  <div class="box box-6" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Mitsui">
+    <div class="input-block">
+      <input type="text" id="name6" name="name6" placeholder="Kto nahui?">
+    </div>
+    <div class="input-block">
+      <input type="number" id="number6" name="number5" placeholder="coins">
+    </div>
+  </div>
+  <div class="box box-7" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Mitsui">
+    <div class="input-block">
+      <input type="text" id="name7" name="name7" placeholder="Kto nahui?">
+    </div>
+    <div class="input-block">
+      <input type="number" id="number7" name="number7" placeholder="coins">
     </div>
   </div>
 
