--- a/iventik.html
+++ b/iventik.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="box box-1" style="--img: url(https://i.postimg.cc/SK4k0VT2/Dimas1.png);" data-text="Renji">
+  <div class="box box-1" style="--img: url(https://i.postimg.cc/SK4k0VT2/Dimas1.png);" data-text="Dimedroll">
     <div class="input-block">
       <input type="text" id="name1" name="name1" placeholder="Kto nahui?">
     </div>
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <div class="box box-2" style="--img: url(https://i.postimg.cc/3RZ6bhDS/img-2.jpg);" data-text="Sora">
+  <div class="box box-2" style="--img: url(https://i.postimg.cc/3RZ6bhDS/img-2.jpg);" data-text="Varusha">
     <div class="input-block">
       <input type="text" id="name2" name="name2" placeholder="Kto nahui?">
     </div>
@@ -43,7 +43,7 @@
     </div>
   </div>
 
-  <div class="box box-3" style="--img: url(https://i.postimg.cc/DZhHg0m4/img-3.jpg);" data-text="Kaito">
+  <div class="box box-3" style="--img: url(https://i.postimg.cc/DZhHg0m4/img-3.jpg);" data-text="Mikola">
     <div class="input-block">
       <input type="text" id="name3" name="name3" placeholder="Kto nahui?">
     </div>
@@ -52,16 +52,32 @@
     </div>
   </div>
 
-  <div class="box box-4" style="--img: url(https://i.postimg.cc/KjqWx5ft/img-4.jpg);" data-text="Tsuki">
+  <div class="box box-4" style="--img: url(https://i.postimg.cc/KjqWx5ft/img-4.jpg);" data-text="Jiujitsa">
     <div class="input-block">
       <input type="text" id="name4" name="name4" placeholder="Kto nahui?">
     </div>
     <div class="input-block">
       <input type="number" id="number4" name="number4" placeholder="coins">
     </div>
+    <div class="image-options-container">
+      <select id="imageOptions4" class="image-options" onchange="changeImageFromSelect(4)">
+        <!-- Здесь будут варианты изображений для первой коробки -->
+        <option value="https://i.postimg.cc/SR9BykgW/IMG-20220413-211839-869.jpg">Ia1</option>
+        <option value="https://i.postimg.cc/qRNf58nD/IMG-20220413-211841-370.jpg">Ia2</option>
+        <option value="https://i.postimg.cc/xdPY9Hhs/Dimas3.png">Ia3</option>
+        <option value="https://i.postimg.cc/gctzwVJQ/Dimas4.png">Ia4</option>
+        <option value="https://i.postimg.cc/8zMNnxHg/Dimas5.png">Ia5</option>
+        <option value="https://i.postimg.cc/NfygRK2M/Dimas6.png">Ia6</option>
+        <option value="https://i.postimg.cc/nrrnRzd3/Dimas7.png">Ia7</option>
+        <option value="https://i.postimg.cc/X7TnLn9g/Dimas8.png">Ia8</option>
+        <option value="https://i.postimg.cc/ZRKmnnhJ/Dimas9.png">Ia9</option>
+
+        <!-- Добавьте другие изображения для первой коробки -->
+      </select>
+    </div>
   </div>
 
-  <div class="box box-5" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Mitsui">
+  <div class="box box-5" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Lizer">
     <div class="input-block">
       <input type="text" id="name5" name="name5" placeholder="Kto nahui?">
     </div>
@@ -69,7 +85,7 @@
       <input type="number" id="number5" name="number5" placeholder="coins">
     </div>
   </div>
-  <div class="box box-6" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Mitsui">
+  <div class="box box-6" style="--img: url(https://i.postimg.cc/y8rCXQ33/IMG-20231210-230351-244.jpg);" data-text="Stasik">
     <div class="input-block">
       <input type="text" id="name6" name="name6" placeholder="Kto nahui?">
     </div>
@@ -77,7 +93,7 @@
       <input type="number" id="number6" name="number5" placeholder="coins">
     </div>
   </div>
-  <div class="box box-7" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Mitsui">
+  <div class="box box-7" style="--img: url(https://i.postimg.cc/nrcWyW4H/img-5.jpg);" data-text="Smod">
     <div class="input-block">
       <input type="text" id="name7" name="name7" placeholder="Kto nahui?">
     </div>
