--- a/iventik.html
+++ b/iventik.html
@@ -64,13 +64,13 @@
         <!-- Здесь будут варианты изображений для первой коробки -->
         <option value="https://i.postimg.cc/SR9BykgW/IMG-20220413-211839-869.jpg">Ia1</option>
         <option value="https://i.postimg.cc/qRNf58nD/IMG-20220413-211841-370.jpg">Ia2</option>
-        <option value="https://i.postimg.cc/xdPY9Hhs/Dimas3.png">Ia3</option>
-        <option value="https://i.postimg.cc/gctzwVJQ/Dimas4.png">Ia4</option>
-        <option value="https://i.postimg.cc/8zMNnxHg/Dimas5.png">Ia5</option>
-        <option value="https://i.postimg.cc/NfygRK2M/Dimas6.png">Ia6</option>
-        <option value="https://i.postimg.cc/nrrnRzd3/Dimas7.png">Ia7</option>
-        <option value="https://i.postimg.cc/X7TnLn9g/Dimas8.png">Ia8</option>
-        <option value="https://i.postimg.cc/ZRKmnnhJ/Dimas9.png">Ia9</option>
+        <option value="https://i.postimg.cc/QNWGgJjH/IMG-20220531-132719.jpg">Ia3</option>
+        <option value="https://i.postimg.cc/JnSwVG5r/IMG-20220618-083145-991.jpg">Ia4</option>
+        <option value="https://i.postimg.cc/4x1T74sP/IMG-20230702-175932-732.jpg">Ia5</option>
+        <option value="https://i.postimg.cc/pdXMDNdH/IMG-20231021-174824-757.jpg">Ia6</option>
+        <option value="https://i.postimg.cc/FHv4Hk51/IMG-20231209-175711-206.jpg">Ia7</option>
+        <option value="https://i.postimg.cc/xTKwhjJQ/IMG-20231210-225323-610.jpg">Ia8</option>
+        <option value="https://i.postimg.cc/02RgVKNZ/IMG-20231210-230151-683.jpg">Ia9</option>
 
         <!-- Добавьте другие изображения для первой коробки -->
       </select>
