--- a/iventik.html
+++ b/iventik.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>EBASHIM</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="https://i.postimg.cc/yY4Wk8cn/free-icon-birthday-cake-1389557.png">
 </head>
 <body>
 <div class="container">
