--- a/iventik.html
+++ b/iventik.html
@@ -35,6 +35,15 @@
     </div>
   </div>
 
+  <div class="box box-8" style="--img: url(https://i.postimg.cc/yd8gXSgq/Di.jpg);">
+    <div class="image-container">
+      <div class="data-text">DianOCHKA</div> <!-- Перемещенный текст data-text -->
+      <div class="input-block">
+        <input type="number" id="number8" name="number8" placeholder="coins">
+      </div>
+    </div>
+  </div>
+
   <div class="box box-4" style="--img: url(https://i.postimg.cc/zDbLPdds/1000008596-01.jpg);">
     <div class="image-container">
       <div class="data-text">Jiujitsa</div> <!-- Перемещенный текст data-text -->
