Осталось только поменять цены и мб шрифт

--- a/iventik.html
+++ b/iventik.html
@@ -37,7 +37,7 @@
 
   <div class="box box-8" style="--img: url(https://i.postimg.cc/yd8gXSgq/Di.jpg);">
     <div class="image-container">
-      <div class="data-text">DianOCHKA</div> <!-- Перемещенный текст data-text -->
+      <div class="data-text">DianОЧКА</div> <!-- Перемещенный текст data-text -->
       <div class="input-block">
         <input type="number" id="number8" name="number8" placeholder="coins">
       </div>
@@ -91,6 +91,10 @@
 
   <button class="image-button4" onmouseover="addNonTransparentClass()" onmouseout="removeNonTransparentClass()" onclick="generateRandomPhraseSet3()">
     <img src="https://i.postimg.cc/6QTW1cjQ/free-icon-beauty-2763444.png" alt="Иконка 3">
+  </button>
+
+  <button class="image-button5" onmouseover="addNonTransparentClass()" onmouseout="removeNonTransparentClass()" onclick="generateRandomPhraseSet4()">
+    <img src="https://i.postimg.cc/RhtRvFdP/free-icon-flirt-1886616.png" alt="Иконка 4">
   </button>
 
 
