--- a/shop.html
+++ b/shop.html
@@ -46,154 +46,154 @@
   <div class="product">
     <img src="https://i.postimg.cc/j2p3SHvv/bottle.png" alt="" class="product-icon">
     <h3 class="product-title">Шот</h3>
-    <p class="product-description">Ты выбираешь человека который будет пить</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/1tRj7D2J/ass.png" alt="" class="product-icon">
     <h3 class="product-title">slap-slap</h3>
-    <p class="product-description">Ты выбираешь человека которому прилетит по жопе</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/Qtn06wpd/free-icon-tshirt-863684.png" alt="" class="product-icon">
     <h3 class="product-title">Я сейчас вообще трусы сниму</h3>
-    <p class="product-description">Ты можешь надеть на себя 1 элемент одежды или заставить когото его снять</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/vTgXChzL/free-icon-yoga-pose-2688988.png" alt="" class="product-icon">
     <h3 class="product-title">Опять раком?</h3>
-    <p class="product-description">Выбранный тобой человек встаёт в произвальную позу, а ты с завязанными глазами должен(на) повторить</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/RZB5QJSb/zvizda.png" alt="" class="product-icon">
     <h3 class="product-title">Желание</h3>
-    <p class="product-description">Выбранный тобой человек выполняет твоё желание прямо сейчас!</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/Wbrckwvk/room.png" alt="" class="product-icon">
     <h3 class="product-title">10 минут</h3>
-    <p class="product-description">Ты или выбираешь 2 человек, или берёшь себе 1 человека и уходишь в комнату</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/jSz3s8rM/free-icon-kiss-4288839.png" alt="" class="product-icon">
     <h3 class="product-title">Засос</h3>
-    <p class="product-description">Ты выбираешь человека которму поставишь засос</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/Px6FgPkh/free-icon-exchange-5462950.png" alt="" class="product-icon">
     <h3 class="product-title">Отдавай трусы</h3>
-    <p class="product-description">Поменяйся одеждой с человеком на выбор</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/nrCwppHm/free-icon-hair-dye-4614130.png" alt="" class="product-icon">
     <h3 class="product-title">Минус волосы</h3>
-    <p class="product-description">Ты можешь вырвать всем по волосу или выбрать человека которому все вырвут по волосу</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/ht1FC4h4/nous.png" alt="" class="product-icon">
     <h3 class="product-title">Зачем...</h3>
-    <p class="product-description">Выбери человека который запихнёт себе что-то в нос на 3 минуты</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/CMQQJBNs/flash.png" alt="" class="product-icon">
     <h3 class="product-title">Обоссалась sunshine</h3>
-    <p class="product-description">Облей кого-нибудь, чем-нибудь(без сахара)</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/5yTKtT0R/free-icon-electronic-cigarette-5172596.png" alt="" class="product-icon">
     <h3 class="product-title">Цыгане</h3>
-    <p class="product-description">Выбирай людей или выбери себе человека и менятесь никотином</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/dtZSfsNP/free-icon-kiss-532165.png" alt="" class="product-icon">
     <h3 class="product-title">*чмок*</h3>
-    <p class="product-description">Накрась губы и расцелуй человека</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/fbD2kxzD/free-icon-snow-6250186.png" alt="" class="product-icon">
     <h3 class="product-title">Брр...</h3>
-    <p class="product-description">Закинь человеку под одежду немного снега или льда</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/SsKgfkYP/free-icon-mime-5058472.png" alt="" class="product-icon">
     <h3 class="product-title">Мим</h3>
-    <p class="product-description">Выбери человека который следующие 3 минуты будет копировать все твои действия</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/906129g3/free-icon-man-carrying-other-person-on-his-back-46719.png" alt="" class="product-icon">
     <h3 class="product-title">Только не на лицо</h3>
-    <p class="product-description">Сядь на кого-нибудь на 3 минуты(не так, как это делал Коля)</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/zfFQkxty/free-icon-cheers-6767436.png" alt="" class="product-icon">
     <h3 class="product-title">Брудершафт</h3>
-    <p class="product-description">Выбери человека с которым будешь пить на брудершафт или затавь это сделать других</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/xjBS8FWQ/old.png" alt="" class="product-icon">
     <h3 class="product-title">Ватный луч</h3>
-    <p class="product-description">Преврати человека в ватника на 5 минут</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/6QcHZyqR/free-icon-tattoo-4268211.png" alt="" class="product-icon">
     <h3 class="product-title">Тату</h3>
-    <p class="product-description">Выбери место на котором человек сделает тату</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/0Ns3mTfg/free-icon-circular-sunglasses-20576.png" alt="" class="product-icon">
     <h3 class="product-title">R.I.P.</h3>
-    <p class="product-description">Выбери человека который завяжет себе глаза на 3 минуты</p>
+    <p class="product-description"></p>
     <p class="product-price">20₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/Cxy6T39Z/free-icon-jumping-rope-6201308.png" alt="" class="product-icon">
     <h3 class="product-title">Дорого</h3>
-    <p class="product-description">Выбери человека который разденется до нижнего белья(Девушки могут оставить 1 элемент одежды) и будет прыгать на скакалке 30 раз</p>
+    <p class="product-description"></p>
     <p class="product-price">920₡</p>
   </div>
 
   <div class="product">
     <img src="https://i.postimg.cc/HnHzr9pH/free-icon-d20-6727584.png" alt="" class="product-icon">
     <h3 class="product-title">/Rand</h3>
-    <p class="product-description">Пускай js решит что ты будешь делать</p>
+    <p class="product-description"></p>
     <p class="product-price">202₡</p>
   </div>
   <!-- Добавьте другие товары по аналогии -->
